Bug 1594027 - add more STL wrappers to fix build with libc++ 9 r=froydnj

Differential Revision: https://phabricator.services.mozilla.com/D62847